2001-06-19  Sam Steingold  <sds@gnu.org>

	* makemake.in (test): strip gensyms before cmp(1)

2001-06-17  Sam Steingold  <sds@gnu.org>

	some symbols appeared in wrong packages - fix this
	* compiler.lisp (function-signature): FOREIGN-FUNCTION is in FFI
	* constobj.d: added package prefixes to non-CL symbols
	* constsym.d (MACRO): all ttype designators are in EXT
	* describe.d: FOREIGN-FUNCTION, FOREIGN-VARIABLE, FOREIGN-ADDRESS
	are in FFI, FOREIGN-POINTER is in EXT
	* foreign1.lisp: export FOREIGN-* from FFI
	* init.lisp: export MACRO from EXT

2001-06-17  Sam Steingold  <sds@gnu.org>

	* disassem.lisp (orig-fundef): new aux function
	(disassemble): moved here and made into a generic function
	handle SYMBOL-MACROs too
	* compiler.lisp (disassemble): removed
	* init.lisp: load "disassem" after CLOS
	* makemake.in (LPARTS): reorder

2001-06-15  Sam Steingold  <sds@gnu.org>

	* makemake.in (makemake, Makefile): new development targets
	(RUN): new Makefile variable
	(halfcompiled): restored; now compilation goes like this:
	*.lisp --> interpreted.mem
	*.lisp + compiler.fas --> halfcompiled.mem
	*.fas --> lispinit.mem
	(stage): create a separate memory image for compilation testing
	and reset *GENSYM-COUNTER* in it from halfcompiled.mem

2001-06-15  Sam Steingold  <sds@gnu.org>

	* threads.lisp (with-timeout, with-lock): do not use WITH-GENSYMS
	which is defined only in inspect.lisp

2001-06-14  Sam Steingold  <sds@gnu.org>

	* stream.d (stream_char_p): new macro
	(socket-status): go through `listen_char()' for
	character streams only
	Reported by Lennart Staflin.

2001-06-11  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (compile-file-pathname-helper): thweak the
	2001-05-30 patch making sure FILE is treated as a pathname

2001-06-09  Sam Steingold  <sds@gnu.org>

	* constpack.d: create THREADS package when MULTITHREAD
	* spvw.d: put :MT into *FEATURES* when MULTITHREAD
	* threads.lisp: new file
	* init.lisp: load it when #+MT
	* makemake.in (LPARTS): add it