@@ -1,5 +1,10 @@
 2001-06-19  Sam Steingold  <sds@gnu.org>
 
+	* compiler.lisp (c-FORMAT): avoid calling FORMAT altogether when
+	the destination is T and the format string is constant
+
+2001-06-19  Sam Steingold  <sds@gnu.org>
+
 	* makemake.in (test): strip gensyms before cmp(1)
 
 2001-06-17  Sam Steingold  <sds@gnu.org>
